overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 body{
-  /* overflow-y: hidden; */
+  overflow-y: scroll;
   /* overflow-x: auto; */
 }
 .active{
